--- a/part7/ultimate-hooks/package.json
+++ b/part7/ultimate-hooks/package.json
@@ -1,24 +1,23 @@
 {
-  "name": "bloglist-frontend",
+  "name": "ultimate-hooks",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
-    "@testing-library/user-event": "^12.6.3",
+    "@testing-library/user-event": "^12.7.1",
     "axios": "^0.21.1",
-    "prop-types": "^15.8.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-scripts": "4.0.1",
-    "web-vitals": "^0.2.4"
+    "react-scripts": "4.0.2",
+    "web-vitals": "^1.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "eslint": "eslint ."
+    "server": "json-server --port=3005 --watch db.json"
   },
   "eslintConfig": {
     "extends": [
@@ -38,8 +37,7 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:3003",
   "devDependencies": {
-    "eslint-plugin-jest": "^25.3.3"
+    "json-server": "^0.16.3"
   }
 }
